package bank;

public class Bank {

    public void perform(Transaction transaction) { System.out.println("    >> Bank executing " + transaction); }

}
